--- a/install/k8s/contiv/contiv.yaml
+++ b/install/k8s/contiv/contiv.yaml
@@ -56,7 +56,7 @@ spec:
     spec:
       # Only run this pod on the master.
       nodeSelector:
-        kubeadm.alpha.kubernetes.io/role: master
+        node-role.kubernetes.io/master: ''
       hostNetwork: true
       containers:
         - name: contiv-etcd
@@ -98,7 +98,7 @@ spec:
         # container programs network policy and routes on each
         # host.
         - name: contiv-netplugin
-          image: contiv/netplugin:1.1.7
+          image: contiv/netplugin:1.2.0
           env:
             - name: CONTIV_ROLE
               value: netplugin
@@ -226,14 +226,14 @@ spec:
     spec:
       # Only run this pod on the master.
       nodeSelector:
-        kubeadm.alpha.kubernetes.io/role: master
+        node-role.kubernetes.io/master: ''
       # The netmaster must run in the host network namespace so that
       # it isn't governed by policy that would prevent it from working.
       hostNetwork: true
       hostPID: true
       containers:
         - name: contiv-netmaster
-          image: contiv/netplugin:1.1.7
+          image: contiv/netplugin:1.2.0
           env:
             - name: CONTIV_ROLE
               value: netmaster
